package com.github.marcellokim.issuetracker.domain;

public enum CommentPurpose {
    GENERAL,
    STATUS_CHANGE
}
