package com.github.marcellokim.issuetracker.domain;

// 확정
public enum IssueStatus {
    NEW,
    ASSIGNED,
    FIXED,
    RESOLVED,
    CLOSED,
    REOPENED,
    DELETED
}
