package com.github.marcellokim.issuetracker.domain;

// 확정
public enum Priority {
    BLOCKER,
    CRITICAL,
    MAJOR,
    MINOR,
    TRIVIAL
}